--- a/.github/workflows/update_nuget.yaml
+++ b/.github/workflows/update_nuget.yaml
@@ -33,13 +33,14 @@ jobs:
     - name: Build
       run: dotnet build --configuration Release /p:AssemblyVersion=0.0.0
       
+      
     - name: update nugets
       run: dotnet outdated -u
       
     - name: Commit & Push changes
       uses: MyJetWallet/push@master
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.UAT_GIT_TOKEN }}
         message: auto-update nugets
 
     - name: Build
