--- a/src/MarketingBox.AffiliateApi/MarketingBox.AffiliateApi.csproj
+++ b/src/MarketingBox.AffiliateApi/MarketingBox.AffiliateApi.csproj
@@ -8,12 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.2.0" />
+	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Destructurama.Attributed" Version="3.0.0" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.41.0" />
     <PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
     <PackageReference Include="MarketingBox.Affiliate.Service.Client" Version="2.1.4" />
     <PackageReference Include="MarketingBox.Registration.Service.Client" Version="3.3.1" />
     <PackageReference Include="MarketingBox.Reporting.Service.Client" Version="3.3.2" />
+	<PackageReference Include="MarketingBox.Postback.Service.Client" Version="1.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
