--- a/src/MarketingBox.AffiliateApi/MarketingBox.AffiliateApi.csproj
+++ b/src/MarketingBox.AffiliateApi/MarketingBox.AffiliateApi.csproj
@@ -9,13 +9,15 @@
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.2.0" />
 	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+	<PackageReference Include="AutoWrapper.Core" Version="4.5.0" />
     <PackageReference Include="Destructurama.Attributed" Version="3.0.0" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.42.0" />
     <PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
-    <PackageReference Include="MarketingBox.Affiliate.Service.Client" Version="2.1.9" />
-    <PackageReference Include="MarketingBox.Postback.Service.Client" Version="1.0.12" />
-    <PackageReference Include="MarketingBox.Registration.Service.Client" Version="3.3.2" />
-    <PackageReference Include="MarketingBox.Reporting.Service.Client" Version="3.3.8" />
+    <PackageReference Include="MarketingBox.Affiliate.Service.Client" Version="2.1.10" />
+    <PackageReference Include="MarketingBox.Postback.Service.Client" Version="1.0.14" />
+    <PackageReference Include="MarketingBox.Registration.Service.Client" Version="3.3.4" />
+    <PackageReference Include="MarketingBox.Reporting.Service.Client" Version="3.3.9" />
+    <PackageReference Include="MarketingBox.Sdk.Common" Version="1.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
