--- a/test/MarketingBox.AffiliateApi.Tests/MarketingBox.AffiliateApi.Tests.csproj
+++ b/test/MarketingBox.AffiliateApi.Tests/MarketingBox.AffiliateApi.Tests.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\MarketingBox.AffiliateApi\MarketingBox.AffiliateApi.csproj" />
+  </ItemGroup>
+
 </Project>
