--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -111,5 +111,5 @@ jobs:
         key: ${{ secrets.TRAFFME_SSH_KEY }}
         port: ${{ secrets.TRAFME_UAT_SVC1_PORT }}
         script: |
-          cd /home/monfex/docker-infrastructure/services/MarketingBox.AuthApi
+          cd /home/monfex/docker-infrastructure/services/MarketingBox.AffiliateApi
           docker-compose pull && docker-compose up -d
